--- a/pom.xml
+++ b/pom.xml
@@ -357,11 +357,6 @@
       <version>2.13.3</version>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.7.29</version>
-    </dependency>
-    <dependency>
       <groupId>io.anserini</groupId>
       <artifactId>anserini-fastutil</artifactId>
       <version>6.5.6</version>
@@ -423,4 +418,10 @@
       <version>1.8</version>
     </dependency>
   </dependencies>
+  <exclusions>
+    <exclusion>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+    </exclusion>
+</exclusions> 
 </project>
