--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,11 @@
       <version>2.13.3</version>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.29</version>
+    </dependency>
+    <dependency>
       <groupId>io.anserini</groupId>
       <artifactId>anserini-fastutil</artifactId>
       <version>6.5.6</version>
